--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link id="page-favicon" rel="icon" type="image/x-icon" href='../imagens/favicon.jpg'>
     <title>Ri Happy - Frontend</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="icon" href="./assets/imagens/favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="./assets/imagens/site.webmanifest">
 
     <!-- Font Press Start 2P -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
 <header class="header">
