--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ri Happy - Frontend</title>
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="icon" href="./assets/imagens/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../imagens/favicon.ico" type="image/x-icon">
     <link rel="manifest" href="./assets/imagens/site.webmanifest">
 
     <!-- Font Press Start 2P -->
